--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
+
+* {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 4px;
@@ -15,6 +21,22 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
+  background: #111111;
+}
+
+/* width */
+::-moz-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+/* Handle */
+::-moz-scrollbar-thumb {
+  background: #222222;
+}
+
+/* Handle on hover */
+::-moz-scrollbar-thumb:hover {
   background: #111111;
 }
 
