--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
 
 * {
   font-family: "IBM Plex Sans", sans-serif;
